<resources>
    <string name="app_name">CipherGame</string>
    <string name="ceaser_button">Шифр\nЦезаря</string>
    <string name="byte_button">Шифр\nXOR</string>
    <string name="viginer_button">Шифр\nВиженера</string>
    <string name="reverse_button">Шифр\nразворота</string>
    <string name="spinner_button">Шифр\nпопарной\nзамены</string>
    <string name="title_susses">Ты смог!</string>
    <string name="chat_fragment">Переписка</string>
    <string name="main_action_fragment">История</string>
    <string name="help">Справка</string>

    <string name="viginer">Справка по шифру Вижинера</string>
    <string name="caesar">Справку по шифру Цезаря</string>
    <string name="close">Закрыть</string>

    <string name="next_chat">Перейти к следущему чату</string>
    <string name="nextWork">Перейти к заданию</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
