<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#EDEDED"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:layout_marginBottom="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:layout_weight="1"
                android:id="@+id/button_ceaser"
                style="@style/Buttons_Text"
                android:text="@string/ceaser_button" />

            <Button
                android:layout_weight="1"
                android:id="@+id/button_viginer"
                style="@style/Buttons_Text"
                android:text="@string/viginer_button" />

            <Button
                android:layout_weight="1"
                android:id="@+id/button_reverse"
                style="@style/Buttons_Text"
                android:text="@string/reverse_button" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:layout_marginBottom="200dp"
            android:fontFamily="@font/oswald_bold"
            android:text="TextView"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745" />

        <Button
            android:id="@+id/byte_button"
            style="@style/Buttons_Text2"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="40dp"
            android:text="@string/byte_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spinner_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.756" />

        <Button
            android:id="@+id/spinner_button"
            style="@style/Buttons_Text2"
            android:text="@string/spinner_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/byte_button"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.737" />

        <!--        <androidx.constraintlayout.widget.Guideline-->
        <!--            android:id="@+id/guideline2"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>