<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="148dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/button_caeser"
                android:layout_width="91dp"
                android:layout_height="71dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/ceaser_button"
                android:textColor="@color/purple_700" />

            <Button
                android:id="@+id/button_reverse"
                android:layout_width="91dp"
                android:layout_height="71dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="169dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/reverse_button"
                android:textColor="@color/purple_700" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_viginer"
                android:layout_width="91dp"
                android:layout_height="71dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/viginer_button"
                android:textColor="@color/purple_700" />

        </LinearLayout>

        <Button
            android:id="@+id/button5"
            android:layout_width="146dp"
            android:layout_height="71dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="76dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/byte_button"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="TextView"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <androidx.constraintlayout.widget.Guideline-->
        <!--            android:id="@+id/guideline2"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="horizontal" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>